CORE-675 - Fixed horizontal container child alignment

--- a/css/containers.less
+++ b/css/containers.less
@@ -78,7 +78,7 @@ body {
         margin-bottom: 0;
     }
 
-    .mw-horizontal_flow > .row > *:first-child {
+    .mw-horizontal_flow > div > .row > * {
         padding-left: 0;
     }
 
